fix: autenticação no login

--- a/Banco GOIA/src/main/webapp/index.html
+++ b/Banco GOIA/src/main/webapp/index.html
@@ -7,6 +7,8 @@
     <link rel="icon" type="image/png" href="/static/img/goia-icon-header.png">
     <link rel="stylesheet" href="/static/css/landing-page.css">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+    <!-- SweetAlert2 para NPS e popups -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
 
@@ -67,10 +69,10 @@
             <a href="#" class="popup-trigger" data-title="Empréstimo" data-description="Opções de empréstimos transparentes e seguros que deixam você no controle.">Saiba mais →</a>
         </div>
         <div class="card">
-            <div class="icon">🏦</div>
-            <h3>GoiaConsignado</h3>
-            <p>O empréstimo consignado para servidores públicos federais e para aposentados e pensionistas do INSS.</p>
-            <a href="#" class="popup-trigger" data-title="GoiaConsignado" data-description="Empréstimo consignado para servidores públicos e aposentados do INSS.">Saiba mais →</a>
+            <div class="icon">🛍️</div>
+            <h3>GOIA Shop</h3>
+            <p>Marketplace com diversos produtos, cashback exclusivo e vantagens especiais para correntistas GOIA.</p>
+            <a href="https://goiashop.store" target="_blank" rel="noopener noreferrer" class="external-link">Acessar loja →</a>
         </div>
         <div class="card">
             <div class="icon">📈</div>
@@ -167,6 +169,13 @@
                     <span class="plus-coteire3">+</span>
                     <div class="faq-answer hidden">
                         <p>O GOIA é 100% digital e não possui agências físicas. Todo atendimento é feito online.</p>
+                    </div>
+                </div>
+                <div class="faq-item-coteire3">
+                    <span>Como funciona o GOIA Shop?</span>
+                    <span class="plus-coteire3">+</span>
+                    <div class="faq-answer hidden">
+                        <p>O GOIA Shop é nosso marketplace parceiro com diversos produtos e cashback exclusivo para correntistas GOIA. Acesse goiashop.store e aproveite as vantagens especiais!</p>
                     </div>
                 </div>
             </div>
